--- a/RobotMain/trunk/build.xml
+++ b/RobotMain/trunk/build.xml
@@ -42,6 +42,7 @@
       <arg value="-o"/>
       <arg value="${binary}"/>
       <arg value="-v"/>
+	  <arg value="-g"/>
       <classpath>
         <pathelement location="${nxj.jtools.jar}"/>
   		<pathelement location="${nxj.commons.jar}"/>
